Working towards clean files

--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <!--
 	Brett Wilhelm
-	319
+	Group 81
 -->
 
 <html>
@@ -13,7 +13,7 @@
 			}
 		  canvas {background-color: rgba(0,0,0,1);}
 		</style>
-		<script src="galagah.js"></script>
+		<script src="game.js"></script>
 	</head>
 	<body onload="init()">
 		<canvas id="canvas"></canvas>
